crates/keron-lang/tests/corpus/errors/check/duplicate_struct_field.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: duplicate field `x`
  --> 1:24
  |
1 | struct Point { x: Int, x: Int }
  |                        ^
